# i18n

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  ansible-requirement.txt  bindep.txt  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
checksite/: horizon-reload.sh  local.conf
doc/source/: about.rst  atc-stats.rst  bug_report.rst  check_translation.rst  conf.py  contributing.rst  create_lang_team.rst  glossary.rst  handling_bugs.rst  i18n_team_meeting.rst  index.rst  infra-debug.rst  infra.rst  lang_team.rst  official_translator.rst  project_setup.rst  ptl.rst  release_management.rst  reviewing-translation-import.rst  sig_chair.rst  tools.rst  translation_stats.rst  translation_tips.rst
doc/source/atc-stats/: liberty.rst  mitaka.rst  newton.rst  ocata.rst  pike.rst
doc/source/atc-stats/data/: pike.csv
doc/source/data/: mitaka.csv  newton.csv  ocata.csv  queens.csv  rocky.csv  stein.csv
doc/source/locale/de/LC_MESSAGES/: doc.po
doc/source/locale/en_GB/LC_MESSAGES/: doc.po
doc/source/locale/id/LC_MESSAGES/: doc.po
doc/source/locale/ja/LC_MESSAGES/: doc.po
doc/source/locale/ko_KR/LC_MESSAGES/: doc.po
doc/source/locale/ru/LC_MESSAGES/: doc.po
doc/source/locale/tr_TR/LC_MESSAGES/: doc.po
doc/source/locale/zh_CN/LC_MESSAGES/: doc.po
glossary/locale/: glossary.pot
glossary/locale/de/LC_MESSAGES/: glossary.po
glossary/locale/fr/LC_MESSAGES/: glossary.po
glossary/locale/ja/LC_MESSAGES/: glossary.po
glossary/locale/ko_KR/LC_MESSAGES/: glossary.po
glossary/locale/ru/LC_MESSAGES/: glossary.po
glossary/locale/zh_CN/LC_MESSAGES/: glossary.po
i18n/locale/: i18n.pot
i18n/locale/de/LC_MESSAGES/: i18n.po
i18n/locale/fr/LC_MESSAGES/: i18n.po
i18n/locale/it/LC_MESSAGES/: i18n.po
i18n/locale/ja/LC_MESSAGES/: i18n.po
i18n/locale/ko_KR/LC_MESSAGES/: i18n.po
i18n/locale/ru/LC_MESSAGES/: i18n.po
i18n/locale/tr-TR/LC_MESSAGES/: i18n.po
i18n/locale/zh_CN/LC_MESSAGES/: i18n.po
playbooks/: README.rst  ac.json.j2  generate_ac.yml  generate_atc.yml  stats.json.j2
playbooks/vars/: zanata_stats_output.csv  zanata_userinfo_output.csv
resources/mascot/: LICENSE
tools/: build-docs.sh  check-po.sh  check-zanata-users-list.sh  check_yaml_file.py  doc-pot-filter.sh  generatepot.sh  get-lang-display-name.py
tools/migration/: README.rst  migration_resources.sh  tox.ini
tools/migration/setup_env/: bindep.txt  requirements.txt  setup.sh
tools/weblate/: weblate_records.py  weblate_stats.py  weblate_userinfo.py  weblate_users.py  weblate_utils.py
tools/zanata/: translation_team.yaml  zanata_stats.py  zanata_userinfo.py  zanata_users.py
