[metadata]
name = openstacki18n
summary = OpenStack I18n
description-file = README.rst
author = OpenStack
author-email = openstack-i18n@lists.openstack.org
home-page = http://docs.openstack.org/developer/i18n/
classifier =
    Environment :: OpenStack
    Intended Audience :: I18n Contributors
    Intended Audience :: Documentaion Contributors
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: I18n

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1

[pbr]
warnerrors = True

[update_catalog]
domain = i18n
output_dir = i18n/locale
input_file = i18n/locale/i18n.pot
no_fuzzy_matching = True
