[metadata]
name = openstacki18n
summary = OpenStack I18n
description_file = README.rst
author = OpenStack
author_email = openstack-i18n@lists.openstack.org
home_page = https://docs.openstack.org/i18n/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: I18n Contributors
    Intended Audience :: Documentaion Contributors
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: I18n

[update_catalog]
domain = i18n
output_dir = i18n/locale
input_file = i18n/locale/i18n.pot
no_fuzzy_matching = True
